infra-k8s/base/echo/ingressroute-protected.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: echo-protected
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.localhost`)
      kind: Rule
      middlewares:
        - name: keycloak-auth
      services:
        - name: echo
          port: 80
