infra-k8s/base/echo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: echo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`echo.localhost`)
      kind: Rule
      services:
        - name: echo
          port: 80
